# beta-desktop

./: package.json  pnpm-lock.yaml
.github/workflows/: temp.yml
src/: App.tsx
src-tauri/: Cargo.toml  macro.rs  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/src/: main.rs
